--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
         <div class="navbar bg-gray align-items-center justify-content-center">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
+
+                    <a class="navbar-brand text-white" aria-current="page" href="index.html">HOME</a>
+
+                    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+                        data-bs-target="navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav font-nav">
-                            <li class="nav-item pr-3">
-                                <a class="nav-link active text-white" aria-current="page" href="index.html">HOME</a>
-                            </li>
+                        <ul class="navbar-nav ms-auto font-nav">
                             <li class="nav-item pr-3">
                                 <a class="nav-link text-white" href="preorder.html">PRE-ORDER</a>
                             </li>
@@ -61,17 +67,15 @@
                     <div class="d-flex flex-column justify-content-center align-items-center m-0 p-0" id="story">
                         <div class="display-3 text-white mb-4">the bostie boys story</div>
                         <div class="col-6 text-white text-center mb-3">Bostie Boys Bakery is the creative outlet for
-                            Katie
-                            Toney,
-                            who discovered a love for baking sourdough bread during the pandemic. She has grown her
+                            Katie Toney, who discovered a love for baking sourdough bread during the pandemic. She has
+                            grown her
                             skills to include many types of bread and pastry, and likes to sell them to friends in
                             the Atlanta area. The bakery is named after her beloved trio of rescued Boston Terriers:
-                            Buddy,
-                            Baker, and Bowie.
+                            Buddy, Baker, and Bowie.
                         </div>
                         <div class="col-6 text-white text-center mb-3">Katie runs her business out of her home in
-                            Atlanta's
-                            historic West End neighborhood, with her three trusty taste testers. Each order is fulfilled
+                            Atlanta's historic West End neighborhood, with her three trusty taste testers. Each order is
+                            fulfilled
                             as it is received, meaning that she doesn't maintain any inventory. Because her bread is
                             baked primarily using natural leaven, you should give a minimum of three days' notice in
                             your orders.
@@ -83,13 +87,13 @@
 
         <div class="container-fluid m-0 p-0">
             <div class="footer row bg-logo">
-                <div class=" footerImg col-4 d-flex justify-content-center align-items-center">
+                <div class=" footerImg col-md-4 col-sm-12 d-flex justify-content-center align-items-center">
                     <img src="images/currant.jpeg" width="400" alt="currantBread">
                 </div>
-                <div class="footerImg col-4 d-flex justify-content-center align-items-center">
+                <div class="footerImg col-md-4 col-sm-12 d-flex justify-content-center align-items-center">
                     <img src="images/gateau.jpeg" width="400" alt="gateauBasque">
                 </div>
-                <div class="footerImg col-4 d-flex justify-content-center align-items-center">
+                <div class="footerImg col-md-4 col-sm-12 d-flex justify-content-center align-items-center">
                     <img src="images/biscuits.jpeg" width="400" alt="biscuits">
                 </div>
             </div>
