--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,11 +26,17 @@
         <div class="navbar bg-gray align-items-center justify-content-center">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
+
+                    <a class="navbar-brand text-white" aria-current="page" href="index.html">HOME</a>
+
+                    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+                        data-bs-target="navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav font-nav">
-                            <li class="nav-item pr-3">
-                                <a class="nav-link active text-white" aria-current="page" href="index.html">HOME</a>
-                            </li>
+                        <ul class="navbar-nav ms-auto font-nav">
                             <li class="nav-item pr-3">
                                 <a class="nav-link text-white" href="preorder.html">PRE-ORDER</a>
                             </li>
