--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 
                     <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
                         data-bs-target="navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="toggle navigation">
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto font-nav">
-                            <li class="nav-item pr-3">
+                            <li class="nav-item">
                                 <a class="nav-link text-white" href="preorder.html">PRE-ORDER</a>
                             </li>
-                            <li class="nav-item pr-3">
+                            <li class="nav-item">
                                 <a class="nav-link text-white" href="aboutUs.html">ABOUT US</a>
                             </li>
                             <li class="nav-item">
