--- a/preorder.html
+++ b/preorder.html
@@ -68,7 +68,7 @@
                 <div class="z25 row">
                     <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
                         <div>
-                            <img src="images/croissant.jpg" alt="croissants" height="500px">
+                            <img src="images/croissaint.jpg" alt="croissants" height="500px">
                         </div>
                     </div>
                     <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
@@ -178,13 +178,13 @@
                 </div>
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="footerImg col-4 d-flex justify-content-center align-items-center">
+                        <div class="footerImg col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
                             <img src="images/bread.jpg" width="500" alt="bread">
                         </div>
-                        <div class="footerImg col-4 d-flex justify-content-center align-items-center">
+                        <div class="footerImg col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
                             <img src="images/leafbread.jpg" width="500" alt="leaf">
                         </div>
-                        <div class="footerImg col-4 d-flex justify-content-center align-items-center">
+                        <div class="footerImg col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
                             <img src="images/currant.jpeg" width="500" alt="currant">
                         </div>
                     </div>
