--- a/preorder.html
+++ b/preorder.html
@@ -23,174 +23,167 @@
 
 <body>
 
-    <div class="container-fluid p-0 m-0">
-        <div class="navbar bg-gray align-items-center justify-content-center">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
+    <div class="navbar bg-gray align-items-center justify-content-center">
+        <nav class="navbar navbar-expand-md navbar-default bg-gray">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-header navbar-collapse navbar-default" id="navbarNav">
+                <ul class="nav navbar-nav mr-auto font-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="preorder.html">PRE-ORDER</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="aboutUs.html">ABOUT US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="contactUs.html">CONTACT US</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
-                    <a class="navbar-brand text-white" aria-current="page" href="index.html">HOME</a>
-
-                    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
-                        data-bs-target="navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto font-nav">
-                            <li class="nav-item pr-3">
-                                <a class="nav-link text-white" href="preorder.html">PRE-ORDER</a>
-                            </li>
-                            <li class="nav-item pr-3">
-                                <a class="nav-link text-white" href="aboutUs.html">ABOUT US</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="contactUs.html">CONTACT US</a>
-                            </li>
-                        </ul>
+    <div class="container-fluid m-0 p-0">
+        <header class="position-relative" id="logo">
+            <div class="text-logo z25 bg-white w-100 d-flex align-items-center justify-content-center flex-column mt-3">
+                <img src="images/logo.PNG" alt="logo" width="400">
+                <div class="h4 mb-3">place orders using the contact us form</div>
+            </div>
+        </header>
+    </div>
+    <main>
+        <div class="menuItems">
+            <div class="z25 row">
+                <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
+                    <div>
+                        <img src="images/croissaint.jpg" alt="croissants" height="500px">
                     </div>
                 </div>
-            </nav>
-        </div>
-
-
-        <div class="container-fluid m-0 p-0">
-            <header class="position-relative" id="logo">
-                <div
-                    class="text-logo z25 bg-white w-100 d-flex align-items-center justify-content-center flex-column mt-3">
-                    <img src="images/logo.PNG" alt="logo" width="400">
-                    <div class="h4 mb-3">place orders using the contact us form</div>
-                </div>
-            </header>
-        </div>
-        <main>
-            <div class="menuItems">
-                <div class="z25 row">
-                    <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
-                        <div>
-                            <img src="images/croissaint.jpg" alt="croissants" height="500px">
-                        </div>
-                    </div>
-                    <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
-                        id="description">
-                        <div class="display-2">croissants</div>
-                        <div>
-                            Katie's croissants are made entirely by hand using high-quality,
-                            European-style
-                            butter. You can choose plain, chocolate (pictured), or frangipane (almond, background).
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row z25">
-                    <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
-                        <div>
-                            <img src="images/bagels.jpg" alt="bagels" height="500px">
-                        </div>
-                    </div>
-                    <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
-                        id="description">
-                        <div class="display-2">bagels</div>
-                        <div>
-                            Katie's naturally-leavened bagels are the perfect vehicle for a breakfast sandwich,
-                            and
-                            can
-                            be
-                            made in just about any flavor you like!
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
-                        <div>
-                            <img src="images/foccsheet.jpg" alt="focaccia" height="500px">
-                        </div>
-                    </div>
-                    <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
-                        id="description">
-                        <div class="display-2">focaccia</div>
-                        <div>
-                            Focaccia has become one of Katie's favorite breads to make because of its
-                            versatility.
-                            Her
-                            favorite variation is topped with garlic, scallions, red pepper flakes, sesame
-                            seeds,
-                            olive
-                            oil,
-                            and flaky sea salt. But you can order it any way you like - message her for more
-                            suggestions
-                            if
-                            you're unsure!
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
-                        <div>
-                            <img src="images/biscuits.jpeg" alt="Biscuits" height="500px">
-                        </div>
-                    </div>
-                    <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
-                        id="description">
-                        <div class="display-2">biscuits</div>
-                        <div>
-                            As a native of Auburn, Alabama, Katie would be remiss if she didn't include biscuits
-                            somewhere
-                            on this list. The flavor pictured is miso buttermilk, topped with fresly-cracked
-                            black
-                            pepper.
-                            Another favorite is sour cream and chive.
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
-                        <div>
-                            <img src="images/gateau.jpeg" alt="gateau" height="500px">
-                        </div>
-                    </div>
-                    <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
-                        id="description">
-                        <div class="display-2">desserts</div>
-                        <div>
-                            In addition to more "simple" bakery items, Katie enjoys taking on a good special
-                            occasion
-                            project. Pictured is a Geateau Basque, a traditional two-layer French pie filled
-                            with
-                            jam
-                            and
-                            pastry cream.
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="d-flex flex-column justify-content-center align-items-center bg-gray" id="description">
-                        <div class="display-2">sourdough</div>
-                        <div id="bread-description">
-                            Last but not least, what started it all - sourdough bread! Katie has learned to make
-                            many different varieties, and is ready to take on whatever your heart desires.
-                        </div>
-                    </div>
-                </div>
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="footerImg col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                            <img src="images/bread.jpg" width="500" alt="bread">
-                        </div>
-                        <div class="footerImg col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                            <img src="images/leafbread.jpg" width="500" alt="leaf">
-                        </div>
-                        <div class="footerImg col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                            <img src="images/currant.jpeg" width="500" alt="currant">
-                        </div>
+                <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
+                    id="description">
+                    <div class="display-2">croissants</div>
+                    <div>
+                        Katie's croissants are made entirely by hand using high-quality,
+                        European-style
+                        butter. You can choose plain, chocolate (pictured), or frangipane (almond, background).
                     </div>
                 </div>
             </div>
-    </div>
+
+            <div class="row z25">
+                <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
+                    <div>
+                        <img src="images/bagels.jpg" alt="bagels" height="500px">
+                    </div>
+                </div>
+                <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
+                    id="description">
+                    <div class="display-2">bagels</div>
+                    <div>
+                        Katie's naturally-leavened bagels are the perfect vehicle for a breakfast sandwich,
+                        and
+                        can
+                        be
+                        made in just about any flavor you like!
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
+                    <div>
+                        <img src="images/foccsheet.jpg" alt="focaccia" height="500px">
+                    </div>
+                </div>
+                <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
+                    id="description">
+                    <div class="display-2">focaccia</div>
+                    <div>
+                        Focaccia has become one of Katie's favorite breads to make because of its
+                        versatility.
+                        Her
+                        favorite variation is topped with garlic, scallions, red pepper flakes, sesame
+                        seeds,
+                        olive
+                        oil,
+                        and flaky sea salt. But you can order it any way you like - message her for more
+                        suggestions
+                        if
+                        you're unsure!
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
+                    <div>
+                        <img src="images/biscuits.jpeg" alt="Biscuits" height="500px">
+                    </div>
+                </div>
+                <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
+                    id="description">
+                    <div class="display-2">biscuits</div>
+                    <div>
+                        As a native of Auburn, Alabama, Katie would be remiss if she didn't include biscuits
+                        somewhere
+                        on this list. The flavor pictured is miso buttermilk, topped with fresly-cracked
+                        black
+                        pepper.
+                        Another favorite is sour cream and chive.
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-4 offset-2 d-flex justify-content-center align-items-center">
+                    <div>
+                        <img src="images/gateau.jpeg" alt="gateau" height="500px">
+                    </div>
+                </div>
+                <div class="col-4 d-flex flex-column justify-content-center align-items-center bg-gray"
+                    id="description">
+                    <div class="display-2">desserts</div>
+                    <div>
+                        In addition to more "simple" bakery items, Katie enjoys taking on a good special
+                        occasion
+                        project. Pictured is a Geateau Basque, a traditional two-layer French pie filled
+                        with
+                        jam
+                        and
+                        pastry cream.
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="d-flex flex-column justify-content-center align-items-center bg-gray" id="description">
+                    <div class="display-2">sourdough</div>
+                    <div id="bread-description">
+                        Last but not least, what started it all - sourdough bread! Katie has learned to make
+                        many different varieties, and is ready to take on whatever your heart desires.
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="footerImg col-md-6 d-flex justify-content-center align-items-center">
+                        <img src="images/bread.jpg" width="500" alt="bread">
+                    </div>
+                    <div class="footerImg col-md-6 d-flex justify-content-center align-items-center">
+                        <img src="images/leafbread.jpg" width="500" alt="leaf">
+                    </div>
+                    <div class="footerImg col-md-6 d-flex justify-content-center align-items-center">
+                        <img src="images/currant.jpeg" width="500" alt="currant">
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
     </div>
 </body>
